# peercolabengine-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/peercolab_engine/: __init__.py  engine.py
tests/: conftest.py  test_chat_instructions.py  test_client_server_serialization.py  test_context_cache.py  test_integration.py  test_logger.py  test_metavalues.py  test_operations.py  test_outbound.py  test_real_world_usage.py  test_result.py  test_result_passthrough_async.py  test_transport_client.py  test_transport_context.py  test_transport_dispatcher.py  test_transport_error.py  test_transport_event.py  test_transport_request.py  test_transport_session.py
